--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,16 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet/dist/images",
+                "output": "leaflet/"
+              },
+              {
+                "glob": "**/*",
+                "input": "./node_modules/leaflet-routing-machine/dist/",
+                "output": "leaflet-routing-machine/"
               }
             ],
             "styles": [
@@ -40,9 +50,19 @@
               },
               {
                 "input": "src/app/app.scss"
+              },
+              {
+                "input": "./node_modules/leaflet/dist/leaflet.css"
+              },
+              {
+                "input": "./node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css"
               }
             ],
-            "scripts": [],
+            "scripts": [
+              {
+                "input": "./node_modules/jquery/dist/jquery.min.js"
+              }
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
